# pacifica-legacy-core

./: Makefile.am  README.md  autogen.sh  configure.ac  myemsl.spec.in  pacifica.spec.in  svnbranch.sh  svnver.sh
conf/: Makefile.am  cart-proxy.conf  elasticsearch-proxy.conf  email.cart.admin.template  email.cart.user.template  email.template  general.ini  logging.cartd.conf  logging.conf  secret.ini  services.xml  webauth-common.conf  webauth-ssl.conf  webauth.conf  webredirect.conf  webservername.conf  webssl.conf
contrib/: transition.py
src/apache/myemsl.d/: 401.conf.in  Makefile.am  admin.conf.in  api.conf.in  auth.conf.in  cart-local.conf.in  cart-proxy-ssl.conf.in  cart-proxy.conf.in  cart.conf.in  client.conf.in  dmspath.conf.in  elasticsearch-proxy.conf.in  elasticsearch.conf.in  error_nopersonid.conf.in  eushandoff.conf.in  getuser.conf.in  ingest.conf.in  instrumentinfo.conf.in  item.conf.in  iteminfo.conf.in  logout.conf.in  nagiosrmtrans.conf.in  notify.conf.in  outage.conf.in  personinfo.conf.in  personinforaw.conf.in  predicate.conf.in  preferences.conf.in  proposal-finder.conf.in  proposalinfo.conf.in  query-raw.conf.in  query-triple.conf.in  query-wsgi.conf.in  query.conf.in  reprocess.conf.in  rmds.conf.in  rmds2.conf.in  sampleingest.conf.in  services.conf.in  simple-search.conf.in  (+7 more)
src/cartd/: 50-cartd  75-amalgam  Makefile.am  cart_process2  cartd-service-poke.ini  cartd_child  cartd_worker  main.c  myemsl_cart_process
src/elasticsearch/: 99-elasticsearch.conf  Makefile.am  dms.json  elasticsearch-service-poke.ini  elasticsearch_sync  erica.json  myemsl_elasticsearch  myemsl_elasticsearch_sync
src/fuse-myemslauth/: Makefile.am  myemslauth.c
src/ingest_core/: 25-ingest  50-slurm  Makefile.am  ingest_job  ingest_vni  myemsl-client.cron  myemsl_bundler  myemsl_ingest.c  myemsl_status.c  myemsl_timing_dump  status_vni
src/ingest_core/xslt/: Makefile.am  html.xsl  json.xsl  text.xsl
src/metadata/: 49-fmds-writer  49-jmds-writer  49-rmds-writer  49-tmds-writer  50-fmds-versionclearer  50-jmds-versionclearer  50-rmds-versionclearer  50-tmds-versionclearer  51-fmds-recoverer  51-jmds-recoverer  51-rmds-recoverer  51-tmds-recoverer  52-fmds-flattener  52-jmds-joiner  52-tmds-trustifier  Makefile.am  fmds-recoverer-service-poke.ini  jmds-recoverer-service-poke.ini  pacifica_fmds_recoverer  pacifica_jmds_recoverer  pacifica_rmds_recoverer  pacifica_tmds_recoverer  rmds-recoverer-service-poke.ini  tmds-recoverer-service-poke.ini
src/misc/: Makefile.am  archive.i  daemonize.c  itemauthgenkeys  itemtokengen  servergenkeys  userproposalstatsgenkeys
src/nagios/: 50-nagios  Makefile.am  check_myemsl_upload  check_myemsl_upload_status  myemsl_nagios_rmtrans.c  nagios_test.tar
src/notification/: Makefile.am  blog-email-start.sh  blog-email.sh  email.sh  emsl-notify  expresso.sh  filestream  hadoop.sh  hostname.sh  init  notification-service  receiver  receiver_poke  recoverer  recoverer_init  start.sh  test.sh  versionclearer_init  writer  writer_init
src/notification/receivers/: Makefile.am  flattener  joiner  trustifier  versionclearer
src/pgsql_schema/: Makefile.am  dbcreate.sh.in  eus.sql  eus_auth.sql  myemsl.sql  myemsl_authz.sql  myemsl_users.sql  myemsltest.sql
src/pgsql_schema/updates/: 1.10-1.11.sql  1.11-1.12.sql  1.12-1.13.sql  1.7-1.8.sql  1.8-1.9.sql  1.9-1.10.sql
src/python/: Makefile.am  pylintrc  setup.py.in
src/python/myemsl/: archive.py  catchall.py  id2filename.py  logging.py  util.py
src/python/myemsl/authenhandler/: __init__.py  myemslcore.py  myemslcoreanon.py  storage.py
src/python/myemsl/authzpersondir/: __init__.py  cart.py  stage.py
src/python/myemsl/brand/: __init__.py
src/python/myemsl/callcurl/: __init__.py
src/python/myemsl/cart/: __init__.py
src/python/myemsl/dbconnect/: __init__.py
src/python/myemsl/elasticsearch/: __init__.py  bulkaction.py  createalias.py  createindex.py  createuserfilter.py  deleteindex.py  getalias.py  jsondumper.py  jsonentry.py  schema.py  unitgen.py
src/python/myemsl/eus2login/: __init__.py
src/python/myemsl/eus2myemsl/: __init__.py
src/python/myemsl/eushandoff/: __init__.py
src/python/myemsl/euslogin/: __init__.py
src/python/myemsl/getconfig/: __init__.py
src/python/myemsl/getfileremote/: __init__.py
src/python/myemsl/getpermission/: __init__.py
src/python/myemsl/getservices/: __init__.py
src/python/myemsl/getstatusremote/: __init__.py
src/python/myemsl/getunixuser/: __init__.py
src/python/myemsl/getuserremote/: __init__.py
src/python/myemsl/ingest/: __init__.py
src/python/myemsl/inoutage/: __init__.py
src/python/myemsl/loadkeytab/: __init__.py
src/python/myemsl/metadata/: __init__.py
src/python/myemsl/nagiosrmtransremote/: __init__.py
src/python/myemsl/pam/: __init__.py
src/python/myemsl/permission/: __init__.py
src/python/myemsl/policy/: __init__.py
src/python/myemsl/prefixtree/: __init__.py
src/python/myemsl/token/: __init__.py  rfc3339parse.py  sign.py  uuid.py  verify.py
src/python/myemsl/uploader/: __init__.py
src/python/myemsl/userrewritehandler/: __init__.py
src/python/myemsl/websessionremote/: __init__.py
src/python/pacifica/metadata/: flattener.py  joiner.py  trustifier.py  trustifier_sync.py
src/python/pacifica/notification/: __init__.py  receiver.py  socketreader.py  writer.py
src/python/scripts/: myemsl_getunixuser  myemsl_unitsearch_import  myemslbundler  myemslupload
src/rmds/: Makefile  Makefile.am  common.cpp  common.h  env.c  fcgi.c  rmds.cpp  testcreate.cpp  testdelete.cpp  testmerge.cpp  testread.cpp
src/sstp/: Makefile.am  finish.c  myemsl_mkstagedir.c  preallocate.c  status.c
src/web_pages/api/1/: Makefile.am  app.build.js  jqueryheader  jqueryuiheader  myemsl-search-pager-helper.js  myemsl-search-pager.js  myemsl-widgets-base.js  myemsl-widgets-main.js  myemsl-widgets-search.css
src/web_pages/static/1/: Makefile.am  label_over.js  myemsl-find.xcf
src/web_pages/status/: Makefile.am  README.md  index.php  php_myemsl.ini  refresh.js  status_style.css
src/web_pages/status/application/: Makefile.am
(+382 files in other folders)
