pkgmyemslconf_DATA = general.ini webauth-ssl.conf webservername.conf \
                     webssl.conf webauth-common.conf logging.conf \
                     webauth.conf webredirect.conf secret.ini \
                     services.xml email.template logging.cartd.conf \
                     email.cart.admin.template email.cart.user.template \
                     elasticsearch-proxy.conf cart-proxy.conf

EXTRA_DIST = $(pkgmyemslconf_DATA)

